--- a/niffler-e-2-e-tests/build.gradle
+++ b/niffler-e-2-e-tests/build.gradle
@@ -1,5 +1,6 @@
 plugins {
     id 'java'
+    id 'io.qameta.allure' version '2.11.2'
 }
 
 group 'guru.qa'
@@ -9,8 +10,20 @@ repositories {
     mavenCentral()
 }
 
+allure {
+    autoconfigure = true
+    version = '2.20.1'
+}
+
 dependencies {
     testImplementation 'org.junit.jupiter:junit-jupiter:5.9.2'
+    testImplementation 'com.squareup.retrofit2:retrofit:2.9.0'
+    testImplementation 'com.squareup.retrofit2:converter-jackson:2.9.0'
+    testImplementation 'com.squareup.okhttp:logging-interceptor:2.7.5'
+    implementation("io.qameta.allure:allure-junit5:2.20.1") {
+        exclude group: "org.junit.platform"
+        exclude group: "org.junit.jupiter"
+    }
     testImplementation 'com.codeborne:selenide:6.11.1'
 }
 
