Add userdata uri property

--- a/niffler-e-2-e-kireev-tests/src/test/resources/config/app.properties
+++ b/niffler-e-2-e-kireev-tests/src/test/resources/config/app.properties
@@ -1,2 +1,3 @@
 application.spend.uri=http://localhost:8093
+application.userdata.uri=http://localhost:8089
 application.frontend.url=http://127.0.0.1:3000
