--- a/niffler-e-2-e-kireev-tests/build.gradle
+++ b/niffler-e-2-e-kireev-tests/build.gradle
@@ -16,7 +16,8 @@ def allureVersion = "2.17.3",
     aspectjWeaverVersion = "1.9.19",
     selenideVersion = "6.11.1",
     restAssuredVersion = "5.3.0",
-    ownerVersion = "1.0.12"
+    ownerVersion = "1.0.12",
+    apacheCommonsVersion = "1.3.2"
 
 allure {
     report {
@@ -40,7 +41,8 @@ dependencies {
             "io.rest-assured:rest-assured:$restAssuredVersion",
             "org.aeonbits.owner:owner:$ownerVersion",
             "io.qameta.allure:allure-selenide:$allureVersion",
-            "io.qameta.allure:allure-rest-assured:$allureVersion"
+            "io.qameta.allure:allure-rest-assured:$allureVersion",
+            "org.apache.commons:commons-io:$apacheCommonsVersion"
     )
 }
 
