--- a/niffler-auth/Dockerfile
+++ b/niffler-auth/Dockerfile
@@ -5,9 +5,5 @@ ENV JAVA_OPTS=""
 WORKDIR /application
 COPY niffler-auth-$VER.jar ./
 
-ENV JPDA_ADDRESS=8787
-ENV JPDA_TRANSPORT=dt_socket
-
-EXPOSE 8787
 EXPOSE 9000
-CMD java -jar -Dspring.profiles.active=docker $JAVA_OPTS niffler-auth-$VER.jar jpda
+CMD java -jar -Dspring.profiles.active=docker $JAVA_OPTS niffler-auth-$VER.jar
