--- a/niffler-userdata/Dockerfile
+++ b/niffler-userdata/Dockerfile
@@ -5,9 +5,5 @@ ENV JAVA_OPTS=""
 WORKDIR /application
 COPY niffler-userdata-$VER.jar ./
 
-ENV JPDA_ADDRESS=8787
-ENV JPDA_TRANSPORT=dt_socket
-
-EXPOSE 8787
 EXPOSE 8089
-CMD java -jar -Dspring.profiles.active=docker $JAVA_OPTS niffler-userdata-$VER.jar jpda
+CMD java -jar -Dspring.profiles.active=docker $JAVA_OPTS niffler-userdata-$VER.jar
