--- a/settings.gradle
+++ b/settings.gradle
@@ -6,3 +6,5 @@ include 'niffler-userdata'
 include 'niffler-spend'
 include 'niffler-grpc-common'
 include 'niffler-e-2-e-tests'
+include 'niffler-e-2-e-Rustam-tests'
+
