--- a/niffler-e-2-e-olga-tests/src/test/resources/config/app.properties
+++ b/niffler-e-2-e-olga-tests/src/test/resources/config/app.properties
@@ -1,3 +1,11 @@
 application.spend.uri=http://localhost:8093
 application.frontend.url=http://127.0.0.1:3000
 application.userdata.uri=http://localhost:8089
+
+database.user=postgres
+database.password=secret
+
+userdata.database.url=jdbc:postgresql://127.0.0.1:5432/niffler-userdata
+auth.database.url=jdbc:postgresql://127.0.0.1:5432/niffler-auth
+spend.database.url=jdbc:postgresql://127.0.0.1:5432/niffler-spend
+currency.database.url=jdbc:postgresql://127.0.0.1:5432/niffler-currency
