--- a/niffler-e-2-e-tests/build.gradle
+++ b/niffler-e-2-e-tests/build.gradle
@@ -13,6 +13,7 @@ plugins {
 
 group 'guru.qa'
 version '0.0.2-SNAPSHOT'
+configurations.testImplementation.canBeResolved = true
 
 repositories {
     mavenCentral()
@@ -47,16 +48,19 @@ dependencies {
     testImplementation "io.grpc:grpc-netty:${grpcVersion}"
     testImplementation "com.google.protobuf:protobuf-java:${protobufVersion}"
     testImplementation "io.qameta.allure:allure-grpc:${allureVersion}"
-
-    compileOnly 'jakarta.annotation:jakarta.annotation-api:1.3.5' // Java 9+ compatibility - Do NOT update to 2.0.0
+    testImplementation 'jakarta.annotation:jakarta.annotation-api:1.3.5' // Java 9+ compatibility - Do NOT update to 2.0.0
 
     testImplementation project(':niffler-grpc-common')
+}
+
+task download(type: Exec) {
+    configurations.testImplementation.files
+    commandLine 'echo', 'Downloaded all dependencies'
 }
 
 test {
     options {
         systemProperties(System.getProperties())
-        systemProperty("test.env", "local")
     }
     useJUnitPlatform()
 }
