--- a/niffler-e-2-e-tests/Dockerfile
+++ b/niffler-e-2-e-tests/Dockerfile
@@ -1,6 +1,7 @@
 FROM gradle:7.6.1-jdk17-alpine
 ENV JAVA_OPTS=""
-RUN apk add tree
+RUN apk add curl
+RUN apk add bash
 RUN apk add gcompat
 WORKDIR /niffler
 COPY ./niffler-e-2-e-tests ./niffler-e-2-e-tests
@@ -8,4 +9,4 @@ COPY ./niffler-grpc-common ./niffler-grpc-common
 COPY ./build.gradle ./
 COPY ./settings.gradle ./
 
-CMD tree; gradle test -Dtest.env=docker
+CMD chmod +x ./niffler-e-2-e-tests/send_results.sh; gradle test -Dtest.env=docker; bash ./niffler-e-2-e-tests/send_results.sh
