--- a/niffler-gateway/build.gradle
+++ b/niffler-gateway/build.gradle
@@ -23,6 +23,7 @@ dependencies {
     implementation 'net.devh:grpc-client-spring-boot-starter:2.14.0.RELEASE'
     implementation "org.springframework:spring-webflux"
     implementation "io.projectreactor.netty:reactor-netty"
+    implementation "org.springframework.boot:spring-boot-starter-graphql"
     testImplementation 'org.springframework.boot:spring-boot-starter-test'
 }
 
