--- a/niffler-e-2-e-tests/build.gradle
+++ b/niffler-e-2-e-tests/build.gradle
@@ -13,7 +13,7 @@ plugins {
 }
 
 group 'guru.qa'
-version '0.0.2-SNAPSHOT'
+version '0.0.3-SNAPSHOT'
 
 repositories {
     mavenCentral()
@@ -57,6 +57,8 @@ dependencies {
     testImplementation "io.grpc:grpc-netty:${grpcVersion}"
     testImplementation "com.google.protobuf:protobuf-java:${protobufVersion}"
     testImplementation "io.qameta.allure:allure-grpc:${allureVersion}"
+    testImplementation 'jakarta.xml.soap:jakarta.xml.soap-api:3.0.0'
+    testImplementation 'com.sun.xml.messaging.saaj:saaj-impl:3.0.0'
     testImplementation 'org.glassfish.jaxb:jaxb-runtime:4.0.1'
     testImplementation 'org.glassfish.jaxb:jaxb-xjc:4.0.1'
     compileOnly 'jakarta.annotation:jakarta.annotation-api:1.3.5' // Java 9+ compatibility - Do NOT update to 2.0.0
