--- a/.github/workflows/niffler-frontend-prod.yaml
+++ b/.github/workflows/niffler-frontend-prod.yaml
@@ -2,7 +2,7 @@ name: frontend_deploy_prod
 on:
   push:
     branches: 
-      - main
+      - master
     paths:
       - 'niffler-frontend/**'
       
