--- a/niffler-frontend/docker-compose.yaml
+++ b/niffler-frontend/docker-compose.yaml
@@ -7,7 +7,7 @@ services:
     ports:
       - "8080:8080"
     environment:
-      NPM_COMMAND=${NPM_COMMAND}
+      - NPM_COMMAND=${NPM_COMMAND}
     restart: always    
 
 
