--- a/.github/workflows/niffler_auth_stage.yml
+++ b/.github/workflows/niffler_auth_stage.yml
@@ -20,11 +20,11 @@ jobs:
         working-directory: ./niffler-auth
         env:
           DOCKER: eclipse-temurin:19-jdk
-          
+          APP_VER: 0.0.3-SNAPSHOT
         run: |
          pwd
          docker system prune -a -f
-         docker build -t niffler-auth:latest --build-arg DOCKER=${DOCKER} .
+         docker build -t niffler-auth:latest --build-arg DOCKER=${DOCKER} --build-arg APP_VER=${APP_VER} .
          docker stop niffler-auth
          docker-compose up -d
          echo "done"
