--- a/.github/workflows/niffler-auth-stage.yml
+++ b/.github/workflows/niffler-auth-stage.yml
@@ -24,7 +24,7 @@ jobs:
         run: |
          pwd
          docker system prune -a -f
-         gradle dockerTag
+         gradle build
          docker build -t niffler-auth:latest --build-arg DOCKER=${DOCKER} --build-arg APP_VER=${APP_VER} .
          docker stop niffler-auth
          docker-compose up -d
