--- a/.github/workflows/niffler-spend-prod.yaml
+++ b/.github/workflows/niffler-spend-prod.yaml
@@ -2,7 +2,7 @@ name: spend_deploy_prod
 on:
   push:
     branches: 
-      - develop
+      - master
     paths:
       - 'niffler-spend/**'
       
