--- a/.github/workflows/niffler-gateway-stage.yaml
+++ b/.github/workflows/niffler-gateway-stage.yaml
@@ -27,5 +27,7 @@ jobs:
          gradle build
          docker build -t niffler-gateway:latest --build-arg DOCKER=${DOCKER} --build-arg APP_VER=${APP_VER} .
          docker stop niffler-gateway
-         docker-compose up -d
+      - name: deploy
+        run : |
+         docker-compose up -d niffler-gateway
          echo "done"
