--- a/.github/workflows/niffler-currency-prod.yaml
+++ b/.github/workflows/niffler-currency-prod.yaml
@@ -26,5 +26,7 @@ jobs:
          docker system prune -a -f
          docker build -t niffler-currency:latest --build-arg DOCKER=${DOCKER} --build-arg APP_VER=${APP_VER} .
          docker stop niffler-currency
-         docker-compose up -d
+      - name: deploy
+        run : |
+         docker-compose up -d niffler-currency
          echo "done"
