--- a/.github/workflows/niffler-spend-prod.yaml
+++ b/.github/workflows/niffler-spend-prod.yaml
@@ -27,5 +27,7 @@ jobs:
          gradle build
          docker build -t niffler-spend:latest --build-arg DOCKER=${DOCKER} --build-arg APP_VER=${APP_VER} .
          docker stop niffler-spend
-         docker-compose up -d
+      - name: deploy
+        run : |
+         docker-compose up -d niffler-spend
          echo "done"
