--- a/.github/workflows/niffler-userdata-prod.yaml
+++ b/.github/workflows/niffler-userdata-prod.yaml
@@ -2,7 +2,7 @@ name: userdata_deploy_prod
 on:
   push:
     branches: 
-      - develop
+      - master
     paths:
       - 'niffler-userdata/**'
       
