--- a/.github/workflows/niffler-currency-stage.yaml
+++ b/.github/workflows/niffler-currency-stage.yaml
@@ -24,6 +24,7 @@ jobs:
         run: |
          pwd
          docker system prune -a -f
+         gradle build
          docker build -t niffler-currency:latest --build-arg DOCKER=${DOCKER} --build-arg APP_VER=${APP_VER} .
          docker stop niffler-currency
       - name: deploy
