--- a/.github/workflows/niffler-auth-stage.yaml
+++ b/.github/workflows/niffler-auth-stage.yaml
@@ -18,6 +18,8 @@ jobs:
     steps:  
       - name: build
         working-directory: ./niffler-auth
+        env:
+         APP_VER: 0.0.3-SNAPSHOT
         run: |
          pwd
          gradle build docker
