--- a/.github/workflows/niffler-auth-stage.yaml
+++ b/.github/workflows/niffler-auth-stage.yaml
@@ -24,8 +24,9 @@ jobs:
          pwd
          gradle build docker
          cd build/docker
+         docker rmi -f $(docker images | grep 'niffler-auth')
          docker build -t dtuchs/niffler-auth:0.0.3-SNAPSHOT --build-arg APP_VER=${APP_VER} .
-         
+         docker-compose up -d --force-recreate niffler-auth
       - name: deploy
         run : |
          echo "done"
