--- a/.github/workflows/niffler-auth-stage.yaml
+++ b/.github/workflows/niffler-auth-stage.yaml
@@ -25,7 +25,7 @@ jobs:
          cd ..
          bash ./docker-compose-dev.sh
          cd niffler-auth/build/docker
-         
+         docker rmi dtuchs/niffler-auth:latest
          docker build -t dtuchs/niffler-auth:latest --build-arg APP_VER=${APP_VER} .
          docker-compose up -d --force-recreate niffler-auth
       - name: deploy
