--- a/.github/workflows/niffler-currency-stage.yaml
+++ b/.github/workflows/niffler-currency-stage.yaml
@@ -17,17 +17,10 @@ jobs:
     needs: checkout
     steps:  
       - name: deploy
-        working-directory: ./niffler-currency
-        env:
-          DOCKER: eclipse-temurin:19-jdk
-          APP_VER: 0.0.3-SNAPSHOT
+        working-directory: ./
         run: |
          pwd
-         docker system prune -a -f
-         gradle build
-         docker build -t niffler-currency:latest --build-arg DOCKER=${DOCKER} --build-arg APP_VER=${APP_VER} .
-         docker stop niffler-currency
-      - name: deploy
-        run : |
-         docker-compose up -d niffler-currency
+         bash ./docker-compose-dev.sh
+         docker-compose up -d --force-recreate niffler-currency
+         docker system prune  -a -f
          echo "done"
