--- a/niffler-currency/src/main/resources/application.yaml
+++ b/niffler-currency/src/main/resources/application.yaml
@@ -20,7 +20,7 @@ spring:
       max-lifetime: 1000
       auto-commit: true
     username: postgres
-    password: secret
+    password: 6Dm476&0
   jpa:
     properties:
       hibernate:
@@ -58,7 +58,7 @@ spring:
     activate:
       on-profile: 'docker'
   datasource:
-    url: 'jdbc:postgresql://niffler-all-db:5432/niffler-currency'
+    url: 'jdbc:postgresql://5.161.176.31:5432/niffler-currency'
   jpa:
     hibernate:
       ddl-auto: validate
