--- a/.github/workflows/niffler-frontend-stage.yaml
+++ b/.github/workflows/niffler-frontend-stage.yaml
@@ -22,9 +22,9 @@ jobs:
          IMAGE_NAME: ${{ vars.IMAGE_NAME_FRONTEND }}
          NPM_COMMAND: ${{ vars.NPM_COMMAND_FRONTEND }}
          REACT_APP_ENV: test
-         REACT_APP_FRONT_URL: http://niffler-frontend
-         REACT_APP_AUTH_URL: http://niffler-auth:9000
-         REACT_APP_GATEWAY_URL: http://niffler-gateway:8090
+         REACT_APP_FRONT_URL: http://${{ vars.REACT_APP_AUTH_URL }}
+         REACT_APP_AUTH_URL: http://${{ vars.REACT_APP_AUTH_URL }}:9000
+         REACT_APP_GATEWAY_URL: http://${{ vars.REACT_APP_AUTH_URL }}:8090
         run: |
          pwd
          env > .env
