--- a/.github/workflows/niffler-frontend-stage.yaml
+++ b/.github/workflows/niffler-frontend-stage.yaml
@@ -31,7 +31,7 @@ jobs:
          echo "REACT_APP_FRONT_URL=http://${{ vars.STAGE_ENDPOINT }}" >> .env.dev
          echo "REACT_APP_AUTH_URL=http://${{ vars.STAGE_ENDPOINT }}:9000" >> .env.dev
          echo "REACT_APP_GATEWAY_URL=http://${{ vars.STAGE_ENDPOINT }}:8090" >> .env.dev
-         cp .env.dev .env.docker
+         cp .env.dev .env.test
          docker system prune -a -f
          docker build . --build-arg NPM_COMMAND=${NPM_COMMAND} -t ${IMAGE_NAME}:latest
          docker stop niffler-frontend 
