--- a/niffler-e-2-e-tests/build.gradle
+++ b/niffler-e-2-e-tests/build.gradle
@@ -3,7 +3,10 @@ buildscript {
         protobufVersion = '3.21.12'
         grpcVersion = '1.52.1'
         allureVersion = '2.21.0'
+        aspectjVersion = '1.9.19'
         selenideVersion = '6.13.0'
+        retrofitVersion = '2.9.0'
+        springComponentsVersion = '6.0.3'
     }
 }
 
@@ -23,25 +26,28 @@ repositories {
 allure {
     version.set("${allureVersion}")
     adapter {
-        aspectjVersion.set("1.9.19")
+        aspectjVersion.set("${aspectjVersion}")
         autoconfigure.set(true)
         aspectjWeaver.set(true)
     }
 }
 
 dependencies {
-    testImplementation 'org.junit.jupiter:junit-jupiter:5.9.2'
-    testImplementation 'commons-io:commons-io:2.11.0'
-    testImplementation 'com.squareup.retrofit2:retrofit:2.9.0'
-    testImplementation 'com.squareup.retrofit2:converter-jackson:2.9.0'
+    testImplementation 'org.junit.jupiter:junit-jupiter:5.9.3'
+
+    // REST
+    testImplementation "com.squareup.retrofit2:retrofit:${retrofitVersion}"
+    testImplementation "com.squareup.retrofit2:converter-jackson:${retrofitVersion}"
     testImplementation 'com.squareup.okhttp3:logging-interceptor:3.14.9'
-    testImplementation 'org.springframework.security:spring-security-crypto:6.0.1'
-    testImplementation 'org.springframework:spring-jdbc:6.0.4'
+    // DB
+    testImplementation "org.springframework.security:spring-security-crypto:${springComponentsVersion}"
+    testImplementation "org.springframework:spring-jdbc:${springComponentsVersion}"
     testImplementation 'org.postgresql:postgresql:42.5.3'
     testImplementation 'p6spy:p6spy:3.9.1'
     testImplementation 'org.hibernate:hibernate-core:6.1.7.Final'
-    testImplementation 'io.qameta.allure:allure-attachments:2.21.0'
     testImplementation 'com.github.vertical-blank:sql-formatter:2.0.3'
+    // Allure
+    testImplementation "io.qameta.allure:allure-attachments:${allureVersion}"
     testImplementation("io.qameta.allure:allure-junit5:${allureVersion}") {
         exclude group: "org.junit.jupiter-api"
         exclude group: "org.junit.platform"
@@ -52,21 +58,23 @@ dependencies {
     }
     testImplementation "io.qameta.allure:allure-okhttp3:${allureVersion}"
     testImplementation "io.qameta.allure:allure-selenide:${allureVersion}"
+    testImplementation "io.qameta.allure:allure-grpc:${allureVersion}"
+    // WEB
     testImplementation "com.codeborne:selenide:${selenideVersion}"
+    // Utils
+    testImplementation 'commons-io:commons-io:2.11.0'
     testImplementation 'com.github.javafaker:javafaker:1.0.2'
     testImplementation 'com.google.code.findbugs:jsr305:3.0.2'
+    // gRPC
     testImplementation "io.grpc:grpc-protobuf:${grpcVersion}"
     testImplementation "io.grpc:grpc-stub:${grpcVersion}"
     testImplementation "io.grpc:grpc-netty:${grpcVersion}"
     testImplementation "com.google.protobuf:protobuf-java:${protobufVersion}"
-    testImplementation "io.qameta.allure:allure-grpc:${allureVersion}"
-    testImplementation 'jakarta.xml.soap:jakarta.xml.soap-api:3.0.0'
-    testImplementation 'com.sun.xml.messaging.saaj:saaj-impl:3.0.0'
-    testImplementation 'org.glassfish.jaxb:jaxb-runtime:4.0.1'
-    testImplementation 'org.glassfish.jaxb:jaxb-xjc:4.0.1'
-    compileOnly 'jakarta.annotation:jakarta.annotation-api:1.3.5' // Java 9+ compatibility - Do NOT update to 2.0.0
-
     testImplementation project(':niffler-grpc-common')
+    compileOnly 'jakarta.annotation:jakarta.annotation-api:1.3.5' // Java 9+ compatibility - Do NOT update to 2.0.0
+    // SOAP
+    testImplementation 'com.sun.xml.messaging.saaj:saaj-impl:3.0.1'
+    implementation 'jakarta.xml.bind:jakarta.xml.bind-api:4.0.0'
 }
 
 test {
