--- a/niffler-auth/src/main/resources/application.yaml
+++ b/niffler-auth/src/main/resources/application.yaml
@@ -68,7 +68,7 @@ spring:
     hibernate:
       ddl-auto: validate
 niffler-front:
-  base-uri: 'http://niffler-frontend'
+  base-uri: 'http://5.161.176.31'
 niffler-auth:
-  base-uri: 'http://niffler-auth:9000'
+  base-uri: 'http://5.161.176.31:9000'
 ---
